<resources>
    <string name="app_name">Fast Food</string>
    <string name="app_label">Fast Foodie</string>
    <string name="search_hint">Try \'cheeseburger\'</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favorites_title">My Favorites</string>

    <!--Strings related to SearchScreen-->

    <!--  For User Profile -->
    <string name="menu_user_ticket">Submit a ticket</string>
    <string name="menu_user_editData">Edit User Data</string>
    <string name="layout_Dietary_Preferences">Dietary Preferences</string>
    <string name="layout_user_info">User Info</string>
    <string name="button_text">Retrieve Data</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="button_signOut">Sign out</string>
    <string name="invalid_signin">Not signed in</string>
    <string name="user_prof_desc">User Avatar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="searchQuery">What are you feeling like eating?</string>

    <string name="favorite_created_toast">Added to favorites!</string>
    <string name="favorite_deleted_toast">Removed from favorites!</string>
    <string name="favorite_add">Add to favorites</string>
    <string name="favorite_remove">Remove from favorites</string>
    <string name="rating_submitted_toast">Rating submitted!</string>

    <string name="find_location">Find near me</string>

    <!-- Strings for tickets page-->
    <string name="submit_ticket">Submit Ticket</string>
    <string name="category">Category :</string>
    <string name="what_can_we_help_you_with">What can we help you with?</string>
    <string name="submit">Submit</string>

    <!-- Strings for food info -->
    <string name="food_protein_total">Protein</string>
    <string name="food_carb_total">Carbohydrates</string>
    <string name="food_fat_total">Fat</string>
    <string name="food_calorie_total">Calories</string>
    <string name="food_price">Price</string>
    <string name="food_category">Category</string>
    <string name="food_location">Location</string>
    <string name="continue_as_guest">Continue as guest</string>


</resources>
