<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FoodInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Food Name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/food_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/food_calorie_total"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <TextView
                android:id="@+id/calorie_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/food_protein_total"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <TextView
                android:id="@+id/protein_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/food_fat_total"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <TextView
                android:id="@+id/fat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/food_carb_total"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <TextView
                android:id="@+id/carbohydrate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/food_location"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_favorite_empty"
        app:layout_constraintBottom_toTopOf="@+id/food_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toEndOf="@+id/food_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

</android.support.constraint.ConstraintLayout>